hphp/hack/test/typecheck/construct/trait_construct_override.php.exp
WARN: File "trait_construct_override.php", line 10, characters 15-36:
Invalid comparison: This expression will always return `true`.
A value of type `string` can never be equal to a value of type `null` (Warn[12007])
ERROR: File "trait_construct_override.php", line 17, characters 19-29:
Class `MyChild` has properties that cannot be null and aren't always set in `__construct`. (NastCheck[3015])
  File "trait_construct_override.php", line 4, characters 20-26:
  `$this->member` is not initialized.
